# Starcatch

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN-cli-features.md  README.md  install.sh  tui-diff-report.html
.atomcode/: mcp.json  settings.json
.atomcode/commands/: check.md  test.md
.atomcode/skills/new-migration/: SKILL.md
.atomcode/skills/rust-reviewer/: SKILL.md
.omo/drafts/: fix-tui-edit-metadata-loss.md
.omo/plans/: fix-tui-edit-metadata-loss.md
.omo/run-continuation/: ses_0f79e38a1ffeZ569KrQEhvMDRb.json  ses_0f79e4243ffehcZZhbmGh4uWD6.json  ses_0f79e4bb3ffe3B7EM0v4scVTDl.json  ses_0f79e55abffeY6qHLb8k1H1p1q.json  ses_0f79ec00cffe13J4F7nEFNObKu.json  ses_0f87bf17affebARiY25XCmV2Os.json  ses_0f88859efffedTrDYmKkDlLIYa.json  ses_0f891c137ffeJfM3oRfqUqZ7Dy.json  ses_0f893e5aeffemCSi3nTYIxew2U.json  ses_0f8945e15ffeiLT1aeI7gkFGK5.json  ses_0f8952e0bffeFhQm57yRCs7UOJ.json  ses_0f898433affepfsyqQY4lb6X0H.json
doc/: README.md  bug_report.md  plan-vicinae-integration.md
qt/: CMakeLists.txt
qt/src/: allpanel.cpp  allpanel.h  command_plugin.cpp  command_plugin.h  database.cpp  database.h  ideapanel.cpp  ideapanel.h  inputparser.cpp  inputparser.h  logpanel.cpp  logpanel.h  main.cpp  mainwindow.cpp  mainwindow.h  models.h  quickinputbar.cpp  quickinputbar.h  theme.cpp  theme.h  toastwidget.cpp  toastwidget.h  todopanel.cpp  todopanel.h
qt/src/commands/: export_command.h  help_command.h  search_command.h  stats_command.h  test_delete_command.h  theme_command.h
skills/: SKILL.md
src/: cli.rs  db.rs  gui.rs  main.rs
src/models/: idea.rs  log.rs  mod.rs  todo.rs
starcatch-core/: Cargo.toml
starcatch-core/src/: db.rs  lib.rs  parser.rs
starcatch-core/src/models/: idea.rs  log.rs  todo.rs
tui/: CLAUDE.md  Cargo.toml  PLAN.md  README.md
tui/src/: app.rs  event.rs  handler.rs  input_parser.rs  main.rs  styles.rs  ui.rs
tui/src/components/: idea_list.rs  log_list.rs  mod.rs  quick_input.rs  sidebar.rs  status_bar.rs  todo_list.rs
