[package]
name = "starcatch"
version = "0.1.0"
edition = "2024"
description = "Catch your starlight ideas — a Wayland-native capture tool"
authors = ["溯星 (Sù Xīng) & 星渺 (Xīng Miǎo)"]

[features]
default = []
gui = ["eframe"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Database
rusqlite = { version = "0.34", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4"] }

# GUI
eframe = { version = "0.31", features = ["wayland"], optional = true }

# Pipe mode - reading stdin
# (built-in, no extra dep needed)

# Template engine
# (built-in, simple string replace)

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 2
strip = true
lto = true
