[workspace]
members = ["starcatch-core", "tui", "vendor/sqlite-migrate"]

[package]
name = "starcatch"
version = "0.1.0"
edition = "2024"
description = "Catch your starlight ideas — a Wayland-native capture tool"
authors = ["溯星 (Sù Xīng) & 星渺 (Xīng Miǎo)"]

[dependencies]
starcatch-core = { path = "starcatch-core" }

# CLI
clap = { version = "4", features = ["derive"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Regex
regex = "1"

# Shell completions
clap_complete = "4"

# Error handling
anyhow = "1"

# (Re-exported from starcatch-core but needed directly)
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 2
strip = true
lto = true
